adding paragraph tag

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is a heading</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dicta fuga quaerat voluptatibus sequi iusto nostrum odit itaque dolores. Illum!</p>
 </body>
 </html>
